Major security and architecture improvements
- Remove proxy system and account system for security compliance
- Remove network-based capes system (client-sided mod should not have external network functionality)
- Implement random 5-character version suffixes for better version management
- Enhance HTTP security with URL validation and HTTPS preference
- Replace Runtime.exec() with ProcessBuilder for safer command execution
- Recreate AutoClicker module with fair-play compliant settings (disabled by default, 100 tick delays)
- Update Discord Presence module (remove theme references, add third line, 100 tick delay)
- Implement theme saving on game session exit
- Center ActiveModulesHud display on screen instead of top-right corner
- Remove all unfair advantage modules for fair play compliance
- Improve error handling and security measures throughout codebase

All changes maintain fair play compliance and enhance client security.